# typst.ts

./: .gitattributes  .gitignore  .gitmodules  .prettierrc  .style.yapf  0001-fix-unaligned-memory.patch  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  flake.nix  history.txt  package.json  ruff.toml  rust-toolchain.toml  tsconfig.json  turbo.json
benches/lowering/: Cargo.toml
benches/lowering/src/: lowering.rs  reparsing.rs
cli/: Cargo.toml  README.md  build.rs  dist.toml
cli/src/: compile.rs  diag.rs  export.rs  font.rs  lib.rs  main.rs  manual.rs  query.rs  query_repl.rs  tracing.rs  utils.rs  version.rs
compiler/: Cargo.toml  README.md
compiler/src/: browser.rs  browser_world.rs  compile.rs  driver.rs  eval.rs  export.rs  lib.rs  macros.rs  path.rs  source_manager.rs  system.rs  time.rs  utils.rs  vfs.rs  watch.rs  world.rs
compiler/src/diag/: console.rs  mod.rs
compiler/src/export/: dynamic_layout.rs
compiler/src/font/: info.rs  mod.rs  pure.rs  system.rs  web.rs
compiler/src/font/reader/: mod.rs  system.rs  web.rs
compiler/src/font/web/: mod.rs
compiler/src/model/: mod.rs  source_manager.rs  system.rs  system_world.rs  world.rs
compiler/src/package/: browser.rs  dummy.rs  http.rs  mod.rs  system.rs
compiler/src/parser/: mod.rs  semantic_tokens.rs  typst_tokens.rs
compiler/src/service/: compile.rs  diag.rs  driver.rs  export.rs  features.rs  mod.rs  query.rs  session.rs  watch.rs
compiler/src/service/diag/: console.rs  mod.rs
compiler/src/service/export/: dynamic_layout.rs
compiler/src/vfs/: browser.rs  cached.rs  dummy.rs  memory.rs  mod.rs  notify.rs  overlay.rs  path_abs.rs  path_anchored.rs  path_ext.rs  path_interner.rs  path_vfs.rs  system.rs  trace.rs  writable.rs
compiler/src/vfs/model/: anchored_path.rs  file_set.rs  loader.rs  mod.rs  path_interner.rs  paths.rs  vfs_path.rs
compiler/src/workspace/: dependency.rs  file_set.rs  loader.rs  mod.rs
contrib/dev-server/: Cargo.toml
contrib/dev-server/src/: main.rs
contrib/fontctl/: Cargo.toml
contrib/fontctl/src/: git_download.rs  main.rs
core/: Cargo.toml
core/src/: cache.rs  concepts.rs  content.rs  debug_loc.rs  error.rs  exporter.rs  font.rs  hash.rs  lib.rs
core/src/adt/: chashmap.rs  fmap.rs  mod.rs
core/src/adt/chashmap/: tests.rs
core/src/annotation/: link.rs
core/src/artifact/: core.rs  doc.rs  font.rs  geom.rs  image.rs  ligature.rs  mod.rs
core/src/artifact_ir/: alloc.rs  core.rs  doc.rs  font.rs  geom.rs  image.rs  ligature.rs  mod.rs
core/src/concepts/: deferred.rs  hash.rs  marker.rs  mod.rs  query.rs  typst.rs
core/src/config/: compiler.rs  mod.rs  workspace.rs
core/src/exporter/: ast.rs  pdf.rs  svg.rs
core/src/font/: glyph.rs  ligature.rs  loader.rs  mod.rs  partial_book.rs  profile.rs  resolver.rs  slot.rs
core/src/package/: dummy.rs  mod.rs
core/src/vector/: bbox.rs  convert.rs  flat_ir.rs  flat_vm.rs  geom.rs  incr.rs  ir.rs  lowering.rs  mod.rs  path2d.rs  stream.rs  utils.rs  vm.rs
core/src/vector/flat_ir/: layout.rs  lowering.rs  mod.rs  module.rs
core/src/vector/ir/: color.rs  compose.rs  geom.rs  layout.rs  meta.rs  module.rs  primitives.rs  text.rs  visualize.rs
core/src/vector/pass/: glyph2vec.rs  mod.rs  span2vec.rs  typst2vec.rs  vec2bbox.rs  vec2source_mapping.rs  vec_isolate.rs
crates/reflexo/: Cargo.toml
crates/reflexo-typst/: Cargo.toml  README.md
crates/reflexo-typst/src/: compile.rs  concepts.rs  driver.rs  error.rs  eval.rs  export.rs  exporter.rs  features.rs  lib.rs  query.rs  task.rs  time.rs  utils.rs  watch.rs
crates/reflexo-typst/src/config/: mod.rs
crates/reflexo-typst/src/diag/: console.rs  mod.rs
crates/reflexo-typst/src/export/: dynamic_layout.rs
crates/reflexo-typst/src/exporter/: ast.rs  (+7 more)
crates/reflexo-vfs/: Cargo.toml
crates/reflexo-vfs/src/: browser.rs  cached.rs  dummy.rs  lib.rs  notify.rs  overlay.rs  path_interner.rs  path_mapper.rs  resolve.rs  system.rs  trace.rs
crates/reflexo-world/: Cargo.toml
crates/reflexo-world/src/: browser.rs  entry.rs  lib.rs  source.rs  system.rs  world.rs
crates/reflexo/src/: content.rs  debug_loc.rs  error.rs  escape.rs  hash.rs  lib.rs  time.rs
exporter/ast/: Cargo.toml  README.md
exporter/ast/src/: ast.rs  lib.rs
exporter/canvas/: Cargo.toml  README.md
exporter/canvas/src/: annotation.rs  content.rs  image.rs  lib.rs  render_image.rs  render_shape.rs  render_text.rs  shape.rs  svg.rs  text.rs  utils.rs
exporter/dom/: Cargo.toml
exporter/dom/src/: canvas_backend.rs  dom.rs  escape.rs  factory.rs  incr.rs  lib.rs  semantics_backend.rs  svg_backend.rs
exporter/pdf/: Cargo.toml  README.md
exporter/pdf/src/: lib.rs
exporter/raster/: Cargo.toml  README.md
exporter/raster/src/: lib.rs  pixmap.rs
exporter/serde/: Cargo.toml  README.md
exporter/serde/src/: ir.rs  json.rs  lib.rs  macros.rs  rmp.rs
exporter/svg/: Cargo.toml  README.md
exporter/svg/src/: annotation.rs  content.rs  escape.rs  font.rs  geom.rs  hash.rs  image.rs  ir.rs  lib.rs  lowering.rs  render.rs  shape.rs  svg.rs  text.rs  typst.svg.css  typst.svg.js  utils.rs  vm.rs
exporter/text/: Cargo.toml  README.md
exporter/text/src/: lib.rs  text.rs
exporter/tir/: Cargo.toml  README.md
exporter/tir/src/: lib.rs
exporter/ws/: Cargo.toml  README.md
exporter/ws/src/: lib.rs
fuzzers/incremental/: Cargo.toml
fuzzers/incremental/src/: lib.rs  main.rs
precompiler/: Cargo.toml
precompiler/src/: lib.rs
precompiler/src/model/: mod.rs  system_world.rs
projects/rustdoc-typst-demo/: Cargo.toml  Makefile.toml  README.md  typst-header.html
projects/rustdoc-typst-demo/src/: lib.rs
server/dev/: Cargo.toml
server/dev/src/: http.rs  lib.rs  main.rs
server/remote/: Cargo.toml
server/remote/src/: compile.rs  lib.rs  main.rs  ws.rs
tests/common/: Cargo.toml
tests/common/src/: lib.rs  std_artifact.rs  web_artifact.rs
tests/docs/: Cargo.toml
tests/docs/src/: lib.rs
tests/heap-profile/: Cargo.toml
tests/heap-profile/src/: lib.rs  main.rs
tests/incremental/: Cargo.toml
tests/incremental/src/: lib.rs  main.rs
(+3745 files in other folders)
