[workspace.package]
description = "Run Typst in JavaScriptWorld."
authors = ["Typst.ts Developers", "The Typst Project Developers"]
version = "0.5.0-rc7"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://myriad-dreamin.github.io/typst.ts/"
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[workspace]
resolver = "2"
members = [
    "benches/lowering",

    "crates/reflexo",
    "crates/reflexo-vfs",
    "crates/reflexo-world",
    "crates/reflexo-typst",
    "crates/conversion/typst2vec",
    "crates/conversion/vec2canvas",
    "crates/conversion/vec2bbox",
    "crates/conversion/vec2sema",
    "crates/conversion/vec2dom",
    "crates/conversion/vec2svg",

    "cli",

    "fuzzers/incremental",

    "packages/parser",
    "packages/compiler",
    "packages/renderer",
    "packages/typst.node",

    "server/dev",

    "tools/rkyv-assertions",

    "tests/common",
    "tests/heap-profile",
    "tests/incremental",
    "tests/integration",
    "tests/std",
]
exclude = ["projects"]

[profile.release]
opt-level = 3
lto = "fat"
debug = false
strip = true

[profile.relwithdebinfo]
inherits = "release"
lto = "thin"
debug = true
strip = false

[profile.release-ci]
inherits = "release"
opt-level = 1
incremental = true
debug = false
strip = true

# todo: https://github.com/typst/typst/pull/2771
# nightly feature

# [workspace.lints.clippy]
# uninlined_format_args = "warn"

[workspace.dependencies]

# typesetting
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "tinymist-v0.11.23-2" }
typst-ide = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "tinymist-v0.11.23-2" }
typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "tinymist-v0.11.23-2" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "tinymist-v0.11.23-2" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "tinymist-v0.11.23-2" }
ttf-parser = "0.24.1"
# typst = "0.11.1"
# typst-ide = "0.11.1"
# typst-pdf = "0.11.1"
# typst-svg = "0.11.1"
# typst-syntax = "0.11.1"
# ttf-parser = "0.20.0"

typst-assets = { git = "https://github.com/typst/typst-assets", rev = "4ee794c" }
typst-dev-assets = { git = "https://github.com/typst/typst-dev-assets", rev = "e9f8127" }

# typst-assets = "0.11.1"
# typst-dev-assets = { git = "https://github.com/typst/typst-dev-assets", tag = "v0.11.1" }

# general
anyhow = "1"
async-recursion = "1.0.4"
async-trait = "0.1.68"
cfg-if = "1.0"
chrono = { version = "0.4.24", default-features = false, features = [
    "clock",
    "std",
] }
futures-util = "0.3.30"
parking_lot = "0.12.1"
pollster = "0.3.0"
rayon = "1.7.0"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }

# data structure and algorithm
comemo = "0.4"
elsa = "1.8.1"
ecow = "0.2"
indexmap = "2"
unicode-width = "0.1.11"
dashmap = "5"

# cli, terminal and tui
ansi_term = "0.12.1"
clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.4"
clap_complete_fig = "4.4"
clap_mangen = { version = "0.2.15" }
human-panic = "1.1.4"
rustyline = { version = "12.0.0", features = ["derive"] }

# system
dirs = "5"
fontdb = "0.16"
notify = "6"
path-clean = "1.0.1"
pathdiff = "0.2"
walkdir = "2"
instant = { version = "0.1" }

# web
js-sys = "^0.3"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
wasm-bindgen-test = "0.3.36"
web-sys = "^0.3"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1" }

# image processing
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
] }
resvg = { version = "0.38", default-features = false, features = [
    "raster-images",
] }
svgtypes = "0.13"
tiny-skia = "0.11"
tiny-skia-path = "0.11"

# cryptography and processing
ansi-to-html = "0.1.3"
base64 = "0.22"
base64-serde = "0.7.0"
hex = "0.4.3"
flate2 = "1"
fxhash = "0.2.1"
nohash-hasher = "0.2.0"
rkyv = "0.7.42"
rustc-hash = "2"
serde = { version = "1.0.197" }
serde_json = "1.0.114"
serde_with = { version = "3.6", features = ["base64"] }
serde-wasm-bindgen = "^0.6"
sha2 = "0.10.6"
siphasher = "1"
tar = "0.4"
toml = "0.8"
xmlparser = "0.13.5"

# logging and tracing
env_logger = "0.10.0"
log = "0.4.17"

# test
insta = "1.29.0"

# misc
codespan-reporting = "0.11"
vergen = { version = "8.3.1", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }

# project core
reflexo = { version = "0.5.0-rc7", path = "crates/reflexo", default-features = false }
reflexo-vfs = { version = "0.5.0-rc7", path = "crates/reflexo-vfs" }
reflexo-world = { version = "0.5.0-rc7", path = "crates/reflexo-world" }
reflexo-typst = { version = "0.5.0-rc7", path = "crates/reflexo-typst", default-features = false }
reflexo-typst-shim = { version = "0.5.0-rc7", path = "crates/reflexo-typst-shim", features = [
    "nightly",
] }

# conversions
reflexo-typst2vec = { version = "0.5.0-rc7", path = "crates/conversion/typst2vec" }
reflexo-vec2canvas = { version = "0.5.0-rc7", path = "crates/conversion/vec2canvas" }
reflexo-vec2sema = { version = "0.5.0-rc7", path = "crates/conversion/vec2sema" }
reflexo-vec2bbox = { version = "0.5.0-rc7", path = "crates/conversion/vec2bbox" }
reflexo-vec2dom = { version = "0.5.0-rc7", path = "crates/conversion/vec2dom" }
reflexo-vec2svg = { version = "0.5.0-rc7", path = "crates/conversion/vec2svg" }

# project components
typst-ts-test-common = { version = "0.5.0-rc7", path = "tests/common" }
typst-ts-dev-server = { version = "0.5.0-rc7", path = "server/dev" }
typst-ts-cli = { version = "0.5.0-rc7", path = "cli" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
uninlined_format_args = "warn"
# missing_errors_doc = "warn"
# missing_panics_doc = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"

[patch.crates-io]

# typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0" }
# typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0" }
# typst-ide = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0" }
# typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst-ts-v0.10.0" }

# comemo = { git = "https://github.com/Dherse/comemo", rev = "15c8d5b" }
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.1-content-hint" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.1-content-hint" }
typst-ide = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.1-content-hint" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.1-content-hint" }
typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.1-content-hint" }

# comemo = { path = "../comemo" }
# typst = { path = "../typst/crates/typst" }
# typst-syntax = { path = "../typst/crates/typst-syntax" }
# typst-ide = { path = "../typst/crates/typst-ide" }
# typst-svg = { path = "../typst/crates/typst-svg" }
# typst-pdf = { path = "../typst/crates/typst-pdf" }

# fontdb = { path = "../fontdb" }
