[package]
name = "typst-ts-cli"
description = "Command line tool for Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typst.workspace = true
typst-ide.workspace = true
typst-assets = { workspace = true, features = ["fonts"] }

clap.workspace = true
clap_complete.workspace = true
clap_complete_fig.workspace = true
clap_mangen = { workspace = true, optional = true }

rustyline.workspace = true

comemo.workspace = true
chrono.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

env_logger.workspace = true
log.workspace = true

tracing.workspace = true
tracing-error.workspace = true
flate2.workspace = true
tracing-subscriber.workspace = true

codespan-reporting.workspace = true
human-panic.workspace = true

typst-ts-core = { workspace = true }
typst-ts-compiler = { workspace = true, default-features = false, features = [
    "system",
    # "lazy-fontdb",
    "dynamic-layout",
] }

typst-ts-svg-exporter = { workspace = true, optional = true }

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true

[features]

default = ["ast", "pdf", "svg", "text", "gen-manual", "embedded-fonts"]
gen-manual = ["dep:clap_mangen"]
embedded-fonts = []
debug-repl = []
ast = ["typst-ts-core/ast"]
pdf = ["typst-ts-core/pdf"]
svg = [
    #
    "typst-ts-svg-exporter",
    "typst-ts-svg-exporter/experimental-ligature",
]
text = []
