[package]
name = "typst-ts-cli"
description = "Command line tool for Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typst.workspace = true
typst-ide.workspace = true
typst-pdf.workspace = true
typst-assets = { workspace = true, features = ["fonts"] }

clap.workspace = true
clap_complete.workspace = true
clap_complete_fig.workspace = true
clap_mangen = { workspace = true, optional = true }

rustyline.workspace = true

comemo.workspace = true
chrono.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

env_logger.workspace = true
log.workspace = true

flate2.workspace = true

human-panic.workspace = true

reflexo-typst = { workspace = true, default-features = false, features = [
    "system",
    "dynamic-layout",
] }

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true
vergen-gitcl.workspace = true

[features]

default = ["ast", "pdf", "svg", "text", "gen-manual", "embedded-fonts"]
gen-manual = ["dep:clap_mangen"]
embedded-fonts = []
debug-repl = []
ast = ["reflexo-typst/ast"]
pdf = ["reflexo-typst/pdf"]
svg = ["reflexo-typst/svg", "reflexo-typst/experimental-ligature"]
text = []
