[package]
name = "typst-ts-compiler"
description = "Compile Typst documents."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
typst-library.workspace = true
comemo.workspace = true

once_cell.workspace = true
siphasher.workspace = true
append-only-vec = "0.1.2"
codespan-reporting.workspace = true
parking_lot.workspace = true
hex.workspace = true
sha2.workspace = true
flate2.workspace = true

serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = { workspace = true, optional = true }

memmap2 = { version = "0.5", optional = true }
dirs = { workspace = true, optional = true }
walkdir = { version = "2", optional = true }
same-file = { version = "1", optional = true }
notify = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
log = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "console",
    "Window",
    "Blob",
    "ImageData",
] }

base64.workspace = true
rustc-hash = "1.1.0"
fst = "0.4.7"
indexmap.workspace = true
nohash-hasher = "0.2.0"
path-clean = "1.0.1"
pathdiff = "0.2.1"

typst-ts-core.workspace = true

[dev-dependencies]
serde.workspace = true

[features]
cjk = []
system = [
    "dep:memmap2",
    "dep:dirs",
    "dep:walkdir",
    "dep:same-file",
    "dep:notify",
    "dep:log",
]
__web = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
    "dep:pollster",
]
web-render = ["__web"]
browser-compile = ["__web", "web-render"]
browser-embedded-fonts = ["__web"]
web = ["__web", "web-render", "browser-compile", "browser-embedded-fonts"]
default = ["system"]
