[package]
name = "typst-ts-core"
description = "Core function of Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typst.workspace = true
comemo.workspace = true
ttf-parser.workspace = true
path-clean.workspace = true

ecow.workspace = true
base64.workspace = true
hex.workspace = true
siphasher.workspace = true
sha2.workspace = true
byteorder.workspace = true
base64-serde = "0.7.0"

once_cell.workspace = true

serde.workspace = true
serde_json.workspace = true
tiny-skia.workspace = true
flate2.workspace = true
xmlparser.workspace = true
serde_with = { version = "2.3.2", features = ["base64"] }
rkyv = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[features]
rkyv = ["dep:rkyv", "rkyv/alloc"]
rkyv-validation = ["dep:rkyv", "rkyv/validation"]
flat-vector = ["rkyv", "rkyv-validation"]
vector-bbox = []

__web = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
web = ["__web"]
full = ["web", "flat-vector", "vector-bbox"]
default = ["full"]
