[package]
name = "typst-ts-core"
description = "Core function of Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typst.workspace = true
comemo.workspace = true
elsa.workspace = true
ttf-parser.workspace = true
path-clean.workspace = true

ecow.workspace = true
base64.workspace = true
hex.workspace = true
siphasher.workspace = true
sha2.workspace = true
byteorder.workspace = true
base64-serde.workspace = true
fxhash.workspace = true

once_cell.workspace = true
rustc-hash.workspace = true
crossbeam-queue = "0.3.10"
dashmap = { version = "5" }

parking_lot = { workspace = true, features = ["owning_ref"] }
owning_ref = "0.4"
bitvec = { version = "1" }
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
tiny-skia.workspace = true
log.workspace = true
flate2.workspace = true
xmlparser.workspace = true
serde_with.workspace = true
rayon.workspace = true
rkyv = { workspace = true, optional = true }
svgtypes.workspace = true
tiny-skia-path.workspace = true

wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[features]
rkyv = ["dep:rkyv", "rkyv/alloc", "rkyv/archive_le"]
rkyv-validation = ["dep:rkyv", "rkyv/validation"]
flat-vector = ["rkyv", "rkyv-validation"]
vector-bbox = []
debug-gc = []
experimental-ligature = []
no-content-hint = []
glyph2vec = []

__web = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
web = ["__web"]
full = ["web", "glyph2vec", "flat-vector", "vector-bbox"]
default = ["full"]
